# tiktok-business-sync

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: cloud-run.yaml
gcloud/: __init__.py  bigquery.py  create_tasks.py  secret_manager.py
tiktok/: __init__.py  client.py  model.py  pipelines.py
tiktok/auth/: __init__.py  auth.py
tiktok/models/: __init__.py  ad.py  ad_report.py  ad_reporting.py  adgroup.py  assets.py  business_center.py  business_centers.py  campaign.py  creative_report.py  video_insights.py
